--- a/report/index.html
+++ b/report/index.html
@@ -17,11 +17,11 @@
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/4.bcb48051.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.12f850ab.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.b89adbd8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e549bbdc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.22e3384c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6b0ed79e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.cd4d4fa6.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.68de7436.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -44,7 +44,7 @@
 
 
 
-<a href="/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="/_app/immutable/assets/logo.aec5a0c7.png" alt="">
+<a href="/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="/orders-klimov-red-public/_app/immutable/assets/logo.aec5a0c7.png" alt="">
         <span></span></a>
         <button type="button" class="focus:outline-none whitespace-normal m-0.5 rounded-lg focus:ring-2 p-1.5 focus:ring-gray-400  hover:bg-gray-100 dark:hover:bg-gray-600 ml-3 md:hidden" aria-label="Open main menu"><span class="sr-only">Open main menu</span>
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="h-6 w-6 shrink-0" aria-label="bars 3" fill="none" viewBox="0 0 24 24" stroke-width="2"><!-- HTML_TAG_START --><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path> <!-- HTML_TAG_END --></svg></button>
@@ -69,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_1eirqk4 = {
+					__sveltekit_67ht1b = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -79,8 +79,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.12f850ab.js"),
-						import("../_app/immutable/entry/app.6b0ed79e.js")
+						import("../_app/immutable/entry/start.b89adbd8.js"),
+						import("../_app/immutable/entry/app.cd4d4fa6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
