--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.b89adbd8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9436102f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.22e3384c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7935f9da.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cd4d4fa6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f4ea78fb.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.68de7436.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_67ht1b = {
+					__sveltekit_gg53h6 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.b89adbd8.js"),
-						import("./_app/immutable/entry/app.cd4d4fa6.js")
+						import("./_app/immutable/entry/start.9436102f.js"),
+						import("./_app/immutable/entry/app.f4ea78fb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
