--- a/order/index.html
+++ b/order/index.html
@@ -17,12 +17,12 @@
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.37c3d608.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.9436102f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2f7dbadf.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.7935f9da.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.58853980.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.f4ea78fb.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.68de7436.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.3c812ef4.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.2e8cc813.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/3.123c446c.js">
@@ -44,7 +44,7 @@
 
 
 
-<a href="/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="/orders-klimov-red-public/_app/immutable/assets/logo.aec5a0c7.png" alt="">
+<a href="https://mrsky1001.github.io/orders-klimov-red-public/" title="Официальный сайт | KLIMOV.RED" class="flex items-center group" target="_blank"><img width="150" class="h-auto max-w-full" src="/orders-klimov-red-public/_app/immutable/assets/logo.aec5a0c7.png" alt="">
         <span></span></a>
         <button type="button" class="focus:outline-none whitespace-normal m-0.5 rounded-lg focus:ring-2 p-1.5 focus:ring-gray-400  hover:bg-gray-100 dark:hover:bg-gray-600 ml-3 md:hidden" aria-label="Open main menu"><span class="sr-only">Open main menu</span>
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="h-6 w-6 shrink-0" aria-label="bars 3" fill="none" viewBox="0 0 24 24" stroke-width="2"><!-- HTML_TAG_START --><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path> <!-- HTML_TAG_END --></svg></button>
@@ -801,7 +801,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerNAG59_P6eiy-rh-mSd1g4" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerx21G5RiIK2Ec3shiGX1Ul" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -960,7 +960,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerCgPd_93w8Zw-ecINb91S9" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerEX9vAv0odkyisMwWDdx6n" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1119,7 +1119,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerrzGh7QWV4xMDUnM-RGKnv" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerf6fs1_298mSjohqxz06nO" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">4</th>
                         <td class="px-2 py-4">
@@ -1278,7 +1278,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerseK8th_-O8qpNbFMyvq0a" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerxm7eLOwI8tEi1BKR3vQje" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">5</th>
                         <td class="px-2 py-4">
@@ -1437,7 +1437,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerjvpDBUQwFW4x8VLzauksV" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainer1PdDxYuFnMEgdsVY4q7ui" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1478,7 +1478,7 @@
 			
 			<script>
 				{
-					__sveltekit_gg53h6 = {
+					__sveltekit_fa1j17 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1488,8 +1488,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.9436102f.js"),
-						import("../_app/immutable/entry/app.f4ea78fb.js")
+						import("../_app/immutable/entry/start.2f7dbadf.js"),
+						import("../_app/immutable/entry/app.3c812ef4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
