--- a/order/index.html
+++ b/order/index.html
@@ -17,15 +17,15 @@
 		<link href="../_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.37c3d608.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2f7dbadf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5692261f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.58853980.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.e9ead7c2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.3c812ef4.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.97d70693.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.2e8cc813.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/all-toast.store.897c6e97.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/3.123c446c.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/3.74c3752c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/ResultsForm.93004b4c.js">
     <title>Формирование заказа | KLIMOV.RED</title>
 </head>
@@ -801,7 +801,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerx21G5RiIK2Ec3shiGX1Ul" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerP_UNZSInAj50ETj9wgCte" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">2</th>
                         <td class="px-2 py-4">
@@ -960,7 +960,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerEX9vAv0odkyisMwWDdx6n" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerYXqVg59yG-acnpqSt60sT" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">3</th>
                         <td class="px-2 py-4">
@@ -1119,7 +1119,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerf6fs1_298mSjohqxz06nO" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainer4SkJkyZlf6mRKaDjCgfmX" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">4</th>
                         <td class="px-2 py-4">
@@ -1278,7 +1278,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainerxm7eLOwI8tEi1BKR3vQje" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerVe3jIV4SOXYxuTcbUD9VF" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr><tr class="border-b dark:bg-gray-700 dark:border-gray-600 hover:bg-[gray]/5 dark:hover:bg-gray-600"><th scope="row" class="px-3 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">5</th>
                         <td class="px-2 py-4">
@@ -1437,7 +1437,7 @@
     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1"><div class="p-5 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
 
 
-<div id="drawContainer1PdDxYuFnMEgdsVY4q7ui" class="flex flex-col overflow-auto max-w-[100%]"></div>
+<div id="drawContainerLoQyZxK6ehQRFPAvR2CR8" class="flex flex-col overflow-auto max-w-[100%]"></div>
                             </div></div></div></td>
                     </tr></tbody></table>
 
@@ -1478,7 +1478,7 @@
 			
 			<script>
 				{
-					__sveltekit_fa1j17 = {
+					__sveltekit_1701vpy = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -1488,8 +1488,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2f7dbadf.js"),
-						import("../_app/immutable/entry/app.3c812ef4.js")
+						import("../_app/immutable/entry/start.5692261f.js"),
+						import("../_app/immutable/entry/app.97d70693.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
