--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     
 		<link href="./_app/immutable/assets/0.9a2fc6ac.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Img.1d121e74.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2f7dbadf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5692261f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.8eacf69c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.58853980.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e9ead7c2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bfa2c9bd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3c812ef4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.97d70693.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2e8cc813.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Img.d6a855d0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/all-toast.store.897c6e97.js">
@@ -67,7 +67,7 @@
 			
 			<script>
 				{
-					__sveltekit_fa1j17 = {
+					__sveltekit_1701vpy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2f7dbadf.js"),
-						import("./_app/immutable/entry/app.3c812ef4.js")
+						import("./_app/immutable/entry/start.5692261f.js"),
+						import("./_app/immutable/entry/app.97d70693.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
